# sentiment_stock_predictor

./: .gitignore  README.md  vercel.json
.serena/: project.yml
backend/: .env  README.md  main.py  output.json  output2.json  pyproject.toml  test_batch.py  test_out.txt  test_predict_9984.py  test_reddit.py
backend/app/: config.py  main.py
backend/app/collectors/: reddit_api.py  reddit_scraper.py  tdnet_scraper.py
backend/app/ml/: model.py  predict.py
backend/app/models/: schemas.py
backend/app/routers/: __init__.py  predict.py  reddit.py  sentiment.py  stocks.py  wsb.py
backend/app/services/: llm_analyzer.py  sentiment_analyzer.py  stock_fetcher.py
backend/services/: llm_analyzer.py  reddit_client.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIAnalysisEngine.tsx  AIAnalysisSummary.tsx  NewsList.tsx  PredictionCard.tsx  PriceChart.tsx  SearchBar.tsx  SentimentGauge.tsx  SentimentReasoning.tsx  StockPriceCard.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
