[project]
name = "backend"
version = "0.1.0"
description = "Sentiment Stock Predictor - FastAPI Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web フレームワーク
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # AI / ML
    "google-generativeai>=0.8.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    # 株価データ
    "yfinance>=0.2.40",
    # データ収集
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "praw>=7.8.1",
    # ユーティリティ
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
