[project]
name = "backend"
version = "0.1.0"
description = "Sentiment Stock Predictor - FastAPI Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web フレームワーク
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # AI / ML
    "google-generativeai>=0.8.6",
    "google>=3.0.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "vadersentiment>=3.3.2",
    # 株価データ
    "yfinance>=1.2.0",
    # データ収集
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "praw>=7.8.1",
    "pillow>=12.1.1",
    # ユーティリティ
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "plotly>=6.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
